--- a/templates/modules/module.html
+++ b/templates/modules/module.html
@@ -1,4 +1,4 @@
-<div class="container card">
+<div class="container card module">
     <div class="card-header"><h2>{% block title %}{% endblock %}</h2></div>
     <div class="card-body">
         {% block content %}
