--- a/templates/widgets/quotes_widget.html
+++ b/templates/widgets/quotes_widget.html
@@ -1,4 +1,4 @@
-{% extends 'modules/module.html' %}
+{% extends 'widgets/widget.html' %}
 {% import 'utils/quote_util.html' as quoto_util%}
 {% block title %}Motivierende Zitate{% endblock %}
 {% block content %}
