--- a/static/style.css
+++ b/static/style.css
@@ -1,2 +1,38 @@
+.jumbotron {background-color: #606060; color: yellow}
 .card {margin-bottom: 20px;}
 .quote-source {margin-bottom: 20px}
+.autocomplete {position: relative; display: inline-block}
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+}
+
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+
+#titlelogo {
+    width: 75px;
+    height: 75px;
+}
+
+#footer svg {
+  margin-left: auto;
+  margin-right: auto;
+}
