--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,5 +5,6 @@
         <li class="nav-item"><a id= "quotes" class="nav-link" href="{{ url_for("quotes") }}">Zitate</a></li>
         <li class="nav-item"><a id= "activities" class="nav-link" href="{{ url_for("activities") }}">Aktivit&auml;ten</a></li>
         <li class="nav-item"><a id= "config" class="nav-link" href="{{ url_for("config") }}">Konfiguration</a></li>
+        <li class="nav-item"><a id= "thanks" class="nav-link" href="{{ url_for("thanks") }}">Danksagungen</a></li>
     </ul>
 </nav>
